--- a/style.css
+++ b/style.css
@@ -1,71 +1,85 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-body{
-    background-image: url(./asserts/background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.header{
-    margin-top: 5%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-.header h1{
-    font-size: 50px;
-    color:purple;
-}
-.inputs{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 250px;
-    margin-top: 5%;
-    margin-left: 25%;
-    font-size: 25px;
-}
-input{
-    font-size: 25px;
-    border: none;
-    outline: none;
-    border-radius: 15px;
-    margin-top: 2px;
-    padding: 10px;
-}
+      body {
+        padding: 0;
+        margin: 0;
+        font-family: 'Bradley Hand', cursive;
+      }
+      .container {
+        min-height: 590px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        background-image: url('./flames\ bg-img.jpg');
+        background-size: cover;
+      }
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        font-weight: 700;
+        color: rgb(247, 10, 49);
+      }
+      .inputs {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+      }
+      .inputs label {
+        font-weight: 600;
+        font-size: 1.7rem;
+        margin: 5px;
+      }
+      .inputs input {
+        font-size: 1.5rem;
+        font-family: 'Bradley Hand', cursive;
+        width: 350px;
+        height: 35px;
+        margin: 5px;
+        padding: 3px;
+        outline: none;
+      }
+      .inputs button {
+        width: 50%;
+        height: 25px;
+        margin-top: 5%;
+        margin-left: 25%;
+        background-color: rgb(239, 16, 90);
+        font-size: 1.5em;
+        font-weight: 600;
+        font-family: 'Bradley Hand', cursive;
+        border: 0;
+        color: white;
+        height: 50px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .inputs button:hover {
+        color: black;
+        background-color: rgb(216, 8, 78);
+      }
+      .ansbox {
+        margin-top: 5%;
+        width: 350px;
+        height: 40px;
+        background-color: rgba(255, 255, 255, 0);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-label{
-    margin-top: 30px;
-    margin-left: 40%;
-}
-button{
-    margin-left: 45%;
-    background-color: rgb(238, 169, 181);
-    font-size: 20px;
-    border: 0;
-    width: 100px;
-    align-items: center;
-    height: 50px;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-}
-button:hover{
-    background-color: palevioletred;
-    color: white;
-}
+      .ansbox p {
+        font-size: 2em;
+        font-weight: 600;
+        color: rgb(6, 0, 0);
+        overflow: hidden; /* Hide overflow to prevent scrollbar */
+        white-space: nowrap; /* Prevent text from wrapping */
+        animation: typing 1s steps(30) forwards; /* Typing animation */
+        text-align: center; /* Center text within ansbox */
+      }
 
-.ansbox{
-    display: flex;
-    margin-left: 35%;
-    width: 420px;
-    height: 35px;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-}
-#ans{
-    font-size: 40px;
-    color:purple;
-}
+      @keyframes typing {
+        from { width: 0; }
+        to { width: 100%; }
+      }
