--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-image: url('./flames\ bg-img.jpg');
+        background-image: url('./asserts/flames bg-img.jpg');
         background-size: cover;
       }
       .header {
